--- a/app/css/app.css
+++ b/app/css/app.css
@@ -24,16 +24,11 @@
 	display: none;
 }
 .qsstatus{
-	margin: 0;
-	padding: 0;
-	margin-top: 10px;
-	margin-left: 20px;
+	margin: 10px 20px 0 20px;
 	font-size: 0.6em;
 }
 .qstitle{
-	margin: 0;
-	padding: 0;
-	margin-left: 20px;
+	margin: 0 20px;
 	font-size: 16px;
 	color: #0e90d2;
 	word-wrap: break-word;
@@ -44,7 +39,7 @@
 	margin: 0 20px 0 20px;
 	font-size: 14px;
 	color: #757575;
-	  font-weight: 400;
+	font-weight: 400;
 }
 .gap{
 	width: 100%;
@@ -60,9 +55,7 @@
 	word-wrap: break-word;
 }
 #mscontent{
-	margin-top: 0;
-	margin-bottom: 30px;
-		margin-left: 20px;
+	margin: 0 20px 30px 20px;
 	font-size: 14px;
 	color: #757575;
 	  font-weight: 400;
@@ -85,24 +78,6 @@
 	color: #0e90d2;
 	margin-right: 20px;
 }
-#addreply{
-width: 50px;
-  position: fixed;
-  height: 50px;
-  background-color: blue;
-  border-radius: 50%;
-  right: 10px;
-}
-
-div#addreply::before {
-  content: "+";
-  color: white;
-  font-size: 40px;
-  line-height: 40px;
-  text-align: center;
-  width: 100%;
-  display: block;
-  }
 
   /*ZxlslbCPT*/
   .zxls{
@@ -135,19 +110,60 @@ div#addreply::before {
   /*Zjzx*/
   .form1{
   	width: 100%;
-  	margin: 40px 0 0 10%;
+  	margin: 40px 0 0 20px;
   }
   #zxtitle,#zxphone,#zxcontent,.zxlaw{
   	width: 80%;
   	border: 0;
-  	border-bottom: 1px solid #ccc;
+  	border-bottom: 1px solid #0e90d2;
   	font-size: 0.8em;
-  }
-  .zxlaw{
-
   }
   .btnsubmit{
   	display: block;
   	width: 80%;
   	margin: 20px 0 0 0;
   }
+
+  /*tzxq*/
+  .total{
+  	position: absolute;
+  	overflow-y: scroll;
+  }
+ #replydiv{
+ 	position: fixed;
+ 	background-color: white;
+    height: 34px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+ }
+ #replyinput{
+ 	position: relative;
+ 	width: 80%;
+ 	border:0;
+ 	margin-left: 5%;
+ 	border-bottom: 1px solid #0e90d2;
+ 	background:transparent; 
+ 	outline: none;
+ 	font-size: 0.8em;
+ }
+ #replyplane{
+	position: relative;
+	margin-left: 4%;
+ }
+ /*LxlslbCPT*/
+ .lxlists{
+    width: 100%;
+ }
+ .lxname{
+    display:inline-block;
+    width: 20%; 
+    color: #0e90d2;
+    margin: 5px 0 0 20px;
+ }
+ .onlientime{
+    display: inline-block;
+    margin: 5px 0 0 10%;
+    width: 60%;
+ }
